mvn clean compile test now working under java21